--- a/tableWidgetWithConfig/table.html
+++ b/tableWidgetWithConfig/table.html
@@ -17,7 +17,7 @@
     }
   };
 </script>
-<script src="//jsdev.arcgis.com/3.14/"></script>
+<script src="//js.arcgis.com/3.14/"></script>
 </body>
 </html>
 
