--- a/ergMapTool/erg.html
+++ b/ergMapTool/erg.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
-
 <head lang="en">
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <base target="_blank">
+  <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
-
 <body>
-
-  <div data-dojo-type="extension/TableWidget"></div>
-
-  <script>
+  <div data-dojo-type="extension/ergMapTool"></div>
+  <script type="text/javascript">
     var dojoConfig = {
       async: true,
       paths: {
@@ -27,6 +25,6 @@
       parser.parse();
     });
   </script>
-  
+
 </body>
 </html>
