--- a/elevationProfileWidget/elevationProfileWidget.html
+++ b/elevationProfileWidget/elevationProfileWidget.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
-
 <head lang="en">
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
-
 <body>
 
-  <div data-dojo-type="extension/TableWidget"></div>
+  <div data-dojo-type="extension/elevationProfileWidget"></div>
 
+  <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
   <script>
     var dojoConfig = {
       async: true,
@@ -27,6 +26,5 @@
       parser.parse();
     });
   </script>
-  
 </body>
 </html>
