--- a/tableWidgetWithConfig/tableConfig.html
+++ b/tableWidgetWithConfig/tableConfig.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="en">
   <meta charset="UTF-8">
- <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
+
 <body>
 
   <div data-dojo-type="extension/TableWidgetConfig"></div>
@@ -11,11 +13,20 @@
   <script>
     var dojoConfig = {
       async: true,
-      parseOnLoad: true,
       paths: {
         "extension": location.pathname.replace(/\/[^/]+$/, '')
       }
     };
   </script>
-  <script src="//js.arcgis.com/3.14/"></script></body>
+  <script src="//js.arcgis.com/3.15/"></script>
+  <script>
+    require([
+      "dojo/parser",
+      "dojo/domReady!"
+    ], function(parser){
+      parser.parse();
+    });
+  </script>
+  
+</body>
 </html>
