--- a/elevationProfileWidget/elevationProfileWidget.html
+++ b/elevationProfileWidget/elevationProfileWidget.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
