--- a/scatterPlotWidget/scatterPlotWidgetConfig.html
+++ b/scatterPlotWidget/scatterPlotWidgetConfig.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<head lang="en">
+<head>
   <meta charset="UTF-8">
   <title></title>
   <link rel="stylesheet" href="//js.arcgis.com/3.20/dijit/themes/claro/claro.css">
